--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ html{
     color: white;
     font-family: 'Montserrat', calibri;
     font-weight: bold;
-    font-size:60px;
+    font-size:70px;
 	line-height: 84px;
     padding-bottom: 20px;
     border-bottom: 1px solid #FFFFFF;
@@ -56,6 +56,7 @@ html{
     color: white;
     font-family: 'Montserrat', calibri;
     font-size: 30px;
+    font-weight: bolder;
    
 }
 .contaracter h1{
