--- a/style.css
+++ b/style.css
@@ -43,6 +43,25 @@ html{
     background-position: center;
 
 }
+.download_button a
+{
+    height: 40px;
+    width: 200px;
+    text-decoration: none;
+    background-color: #000000;
+    color: rgb(255, 255, 255);
+    position: fixed;
+    z-index: 5;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    bottom: 0%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 16px;
+    font-weight: bold;
+    left: 2%;
+}
 .h1{
     margin-top: 50%;
     color: white;
