--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ html{
     bottom: 0%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     font-size: 16px;
     font-weight: bold;
     left: 2%;
